--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@ Reflux Template
 https://templatemo.com/tm-531-reflux
 -->
     <!-- Bootstrap core CSS -->
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="../static/css/fontawesome.css" />
@@ -452,8 +452,8 @@ https://templatemo.com/tm-531-reflux
     <!-- Bootstrap core JavaScript -->
     <!-- <script src="./assets/js/form.js"></script> -->
 
-    <script src="../vendor/jquery/jquery.min.js"></script>
-    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../static/jquery/jquery.min.js"></script>
+    <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
     
     <script src="../static/js/isotope.min.js"></script>
     <script src="../static/js/owl-carousel.js"></script>
