--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
-    <title>Home Interior</title>
+    <title>home-interior.uz</title>
 <!--
 Reflux Template
 https://templatemo.com/tm-531-reflux
